# GL-001 ThermalCommand - Project Configuration
# Comprehensive code quality and CI configuration
# Version: 1.0.0

[project]
name = "gl-001-thermalcommand"
version = "1.0.0"
description = "GL-001 ThermalCommand - ProcessHeatOrchestrator for GreenLang Process Heat ecosystem"
readme = "docs/README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
authors = [
    { name = "GreenLang Process Heat Team", email = "team@greenlang.io" }
]
keywords = [
    "process-heat",
    "industrial-automation",
    "thermal-systems",
    "greenlang",
    "orchestrator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "python-dateutil>=2.8.0",
    "anyio>=3.7.0",
    "asyncio-throttle>=1.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",
    # Code Quality
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    # Type Stubs
    "types-python-dateutil>=2.8.0",
    "types-requests>=2.31.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "shap>=0.42.0",
    "lime>=0.2.0",
]
streaming = [
    "aiokafka>=0.8.0",
    "confluent-kafka>=2.0.0",
]
industrial = [
    "asyncua>=1.0.0",
    "opcua>=0.98.0",
]
graphql = [
    "strawberry-graphql>=0.200.0",
]
grpc = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
]
all = [
    "gl-001-thermalcommand[dev,ml,streaming,industrial,graphql,grpc]",
]

[project.urls]
Documentation = "https://docs.greenlang.io/agents/gl-001"
Repository = "https://github.com/greenlang/gl-001-thermalcommand"
Changelog = "https://github.com/greenlang/gl-001-thermalcommand/blob/main/CHANGELOG.md"

# =============================================================================
# Build System
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.yaml", "*.json"]

# =============================================================================
# Black - Code Formatting
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    # Defaults
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    # Project specific
    | deployment
    | docs
    | \.proto
)/
'''

# =============================================================================
# Ruff - Linting
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py310"

# Exclude paths
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "deployment",
    "*.proto",
    "*_pb2.py",
    "*_pb2_grpc.py",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "TRY",    # tryceratops
    "FLY",    # flynt
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C90",    # mccabe complexity
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
]

ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional arg in function definition
    "FBT001",
    "FBT002",
    # Allow logging with f-strings (common pattern in this codebase)
    "G004",
    # Ignore complexity for now (can be enabled later)
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    # Allow magic values in comparisons (common in calculations)
    "PLR2004",
    # Allow TODO comments
    "FIX002",
    "TD002",
    "TD003",
    # Allow assert in tests
    "S101",
    # Allow try-except-pass in specific cases
    "S110",
    # Allow subprocess calls (needed for some integrations)
    "S603",
    "S607",
    # Ignore missing type annotations for self (handled by mypy)
    "ANN101",
    "ANN102",
    # Allow uppercase in function names (used in test fixtures)
    "N802",
    # Ignore print statements in CLI
    "T201",
    # Allow shadowing builtins in some cases
    "A003",
    # These conflict with formatter
    "ISC001",
    "COM812",
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions, magic values, and broader imports
"tests/**/*.py" = [
    "S101",     # assert allowed
    "PLR2004",  # magic values allowed
    "ARG001",   # unused function args (fixtures)
    "ARG002",   # unused method args
    "SLF001",   # private member access for testing
    "PT004",    # fixture doesn't return anything
    "PT011",    # pytest.raises too broad
]
# Init files can have unused imports
"__init__.py" = ["F401", "F403"]
# Config files can have different style
"conftest.py" = ["ARG001", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["greenlang"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

# =============================================================================
# MyPy - Static Type Checking
# =============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = ["pydantic.mypy"]

# Package-specific overrides
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "conftest",
]
# Slightly relaxed for tests
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    # Third-party packages without type stubs
    "asyncua.*",
    "opcua.*",
    "aiokafka.*",
    "confluent_kafka.*",
    "strawberry.*",
    "shap.*",
    "lime.*",
    "cvxpy.*",
    "scipy.*",
    "hypothesis.*",
    "prometheus_client.*",
    "grpc.*",
    "grpcio.*",
    "greenlang.*",
]
ignore_missing_imports = true

# Pydantic plugin configuration
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# =============================================================================
# Pytest - Testing
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers
markers = [
    "unit: Unit tests for individual components",
    "simulation: Simulation tests for digital twin and control systems",
    "integration: Integration tests for external systems",
    "safety: Safety tests for boundary violations and emergency handling",
    "performance: Performance tests for timing and resource usage",
    "determinism: Determinism tests for reproducibility verification",
    "acceptance: Acceptance tests for business requirements",
    "slow: Tests that take longer than 5 seconds",
    "requires_hardware: Tests requiring real hardware connections",
]

# Default options
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--color=yes",
]

# Async configuration
asyncio_mode = "auto"

# Timeout
timeout = 30
timeout_method = "thread"

# Logging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage - Code Coverage
# =============================================================================

[tool.coverage.run]
source = ["."]
branch = true
parallel = true
omit = [
    "tests/*",
    "conftest.py",
    "*/__init__.py",
    "deployment/*",
    "docs/*",
    "*_pb2.py",
    "*_pb2_grpc.py",
    ".venv/*",
    "venv/*",
]

[tool.coverage.paths]
source = ["."]

[tool.coverage.report]
# Fail if coverage drops below 85%
fail_under = 85
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
exclude_lines = [
    # Standard exclusions
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    # Debug and logging
    "logger\\.debug",
    "logging\\.debug",
    # Defensive programming
    "assert False",
    "raise RuntimeError\\(",
]

[tool.coverage.html]
directory = "htmlcov"
title = "GL-001 ThermalCommand Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

# =============================================================================
# Bandit - Security Linting
# =============================================================================

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "build",
    "dist",
]
skips = [
    "B101",  # assert_used (allowed in tests, handled by per-file)
    "B104",  # hardcoded_bind_all_interfaces (development)
]

# =============================================================================
# Interrogate - Docstring Coverage
# =============================================================================

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = true
fail-under = 80
exclude = ["tests", "deployment", "docs", "*_pb2.py"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"
