[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gl003-unifiedsteam"
version = "1.0.0"
description = "GL-003 UNIFIEDSTEAM: Unified Steam System Optimization Agent"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "GreenLang Team", email = "team@greenlang.io"}
]
maintainers = [
    {name = "GL-003 Engineering Team", email = "gl003@greenlang.io"}
]
keywords = [
    "steam-system",
    "optimization",
    "thermodynamics",
    "iapws-if97",
    "industrial",
    "energy-efficiency",
    "emissions-reduction",
    "predictive-maintenance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
requires-python = ">=3.10"

dependencies = [
    # Core
    "pydantic>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",

    # Data handling
    "pandas>=2.0",

    # Async
    "asyncio-throttle>=1.0",
    "aiohttp>=3.8",

    # Kafka
    "aiokafka>=0.8",
    "confluent-kafka>=2.0",

    # gRPC
    "grpcio>=1.54",
    "grpcio-tools>=1.54",
    "protobuf>=4.0",

    # GraphQL
    "strawberry-graphql>=0.180",

    # HTTP API
    "fastapi>=0.100",
    "uvicorn>=0.22",

    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.27",

    # Time series
    "influxdb-client>=1.36",

    # OPC-UA
    "asyncua>=1.0",

    # Monitoring
    "prometheus-client>=0.17",
    "opentelemetry-api>=1.18",
    "opentelemetry-sdk>=1.18",
    "opentelemetry-exporter-otlp>=1.18",

    # ML/Causal
    "scikit-learn>=1.3",
    "networkx>=3.0",

    # Logging
    "structlog>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.75",
    "mypy>=1.3",
    "ruff>=0.0.270",
    "black>=23.3",
    "isort>=5.12",
    "pre-commit>=3.3",
]

ml = [
    "torch>=2.0",
    "xgboost>=1.7",
    "lightgbm>=3.3",
    "shap>=0.42",
    "lime>=0.2",
    "dowhy>=0.9",
]

climate = [
    "reportlab>=4.0",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
]

docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=9.1",
    "mkdocstrings[python]>=0.22",
]

all = [
    "gl003-unifiedsteam[dev,ml,climate,docs]",
]

[project.scripts]
gl003 = "GL_Agents.GL003_UnifiedSteam.cli:main"
gl003-server = "GL_Agents.GL003_UnifiedSteam.server:main"

[project.urls]
Homepage = "https://github.com/greenlang/gl003-unifiedsteam"
Documentation = "https://docs.greenlang.io/gl003"
Repository = "https://github.com/greenlang/gl003-unifiedsteam.git"
Issues = "https://github.com/greenlang/gl003-unifiedsteam/issues"
Changelog = "https://github.com/greenlang/gl003-unifiedsteam/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["GL_Agents*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi", "*.json", "*.yaml", "*.proto"]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument (common in callbacks)
]

[tool.ruff.isort]
known-first-party = ["GL_Agents"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001", "S101"]
"__init__.py" = ["F401"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | migrations
  | grpc_generated
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "grpc_generated.*",
    "tests.*",
]
ignore_errors = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance benchmark tests",
    "validation: Reference validation tests",
    "property: Property-based tests",
    "slow: Slow running tests",
    "requires_kafka: Tests requiring Kafka",
    "requires_grpc: Tests requiring gRPC server",
    "requires_opcua: Tests requiring OPC-UA server",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["GL_Agents"]
branch = true
parallel = true
omit = [
    "tests/*",
    "*/grpc_generated/*",
    "*/__init__.py",
]

[tool.coverage.paths]
source = ["GL_Agents"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true

# isort configuration (for when not using ruff)
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["GL_Agents"]
skip = [".venv", "grpc_generated"]

# Hypothesis configuration
[tool.hypothesis]
database = ".hypothesis/examples"
deadline = 400
suppress_health_check = ["too_slow"]
